Added swagger for login and validate endpoints